--- a/index.html
+++ b/index.html
@@ -1,42 +1,32 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    {% include google_analytics.html %}
-    {% seo %}
-    <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
-  </head>
-  <body>
+<html lang="en-us">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Shawn Guthrie</title>
+    </head>
+
+
+    <link rel="stylesheet" href="/assets/css/style.css?v=3e301a13bb22be08f072f83dbb409dc5e11b21a0">
+    </head>
+    <body>
     <div class="container-lg px-3 my-5 markdown-body">
-      <!--
-      {% if site.title and site.title != page.title %}
-      <h1><a href="{{ "/" | absolute_url }}">{{ site.title }}</a></h1>
-      {% endif %}
-      -->
 
-      {{ content }}
+      <h1 id="Shawn Guthrie">Shawn Guthrie</h1>
 
-      <!--
-      {% if site.github.private != true and site.github.license %}
-      <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        This site is open source. {% github_edit_link "Improve this page" %}.
-      </div>
-      {% endif %}
-      -->
-    </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
-    <script>anchors.add();</script>
-    {% if site.google_analytics %}
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-      ga('create', '{{ site.google_analytics }}', 'auto');
-      ga('send', 'pageview');
-    </script>
-    {% endif %}
-  </body>
+    <table>
+    <tbody>
+    <tr>
+        <td><a href="https://www.linkedin.com/in/shawn-guthrie/" target="&#95;blank" rel="noopener">LinkedIn</a></td>
+        <td><a href="https://github.com/Sguthrie123" target="&#95;blank" rel="noopener">GitHub</a></td>
+    </tr>
+    </tbody>
+    </table>
+
+    <p>
+        Motivated, detail-oriented, and responsible Data Scientist with skills in Python,Excel,VBA, and SQL and STEM background.
+        Passionate about using Data Science to solve important problems.
+    </p>
+
+
 </html>
