added part of NHL project

--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
         Motivated, detail-oriented, and responsible Data Scientist with skills in Python,Excel,VBA, and SQL and STEM background.
         Passionate about using Data Science to solve important problems.
     </p>
+    <hr>
 
+    <h2>Recent Projects</h2>
+    <hr>
+    <h3>Betting on the NHL</h3>
+    <p><strong>Overarching Question:</strong>By looking over historical NHL sports book lines, 
+    can we find trends/arbitrage opportunities?<br>
+    Source:
+    </p>
+    <br>
+    <ul>
+        <li><a href="https://www.sportsbookreviewsonline.com/scoresoddsarchives/nhl/nhloddsarchives.htm" target="_blank">NHL Book Lines</a></li>
+    </ul>
 
+    <h3>Home and Away Games</h3>
+    <p><strong>Findings:</strong></p>
+    <ul>
+        <li> that are favored have a statistical advantage to those of the underdogs when both home and away.</li>
+        <li>The favored team is 72% of the time the home team. </li>
+        <li> favored team wins about 59% of the time. </li>
+    </ul>
+    <img src="/Users/shawn/Desktop/Screen Shot 2020-04-18 at 4.05.50 PM.png" style="max-width:500px; width:98%; height:auto; 
+    margin:auto; display:block; border:1px solid black; padding:1%;"/>
 </html>
