--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
     <hr>
 
     <h2>Recent Projects</h2>
-    <hr>
     <h3>Betting on the NHL</h3>
     <p><strong>Overarching Question:</strong>By looking over historical NHL sports book lines, 
     can we find trends/arbitrage opportunities?<br>
@@ -48,6 +47,6 @@
         <li>The favored team is 72% of the time the home team. </li>
         <li> favored team wins about 59% of the time. </li>
     </ul>
-    <img src="/Users/shawn/Desktop/Screen Shot 2020-04-18 at 4.05.50 PM.png" style="max-width:500px; width:98%; height:auto; 
+    <img src="/Users/shawn/Documents/GitHub/BootcampProject1/dev/Shawn/Favored_Team_WL.svg" style="max-width:500px; width:98%; height:auto; 
     margin:auto; display:block; border:1px solid black; padding:1%;"/>
 </html>
