--- a/index.html
+++ b/index.html
@@ -47,6 +47,6 @@
         <li>The favored team is 72% of the time the home team. </li>
         <li> favored team wins about 59% of the time. </li>
     </ul>
-    <img src="/Users/shawn/Documents/GitHub/BootcampProject1/dev/Shawn/Favored_Team_WL.svg" style="max-width:500px; width:98%; height:auto; 
+    <img src="https://github.com/MGao535/BootcampProject1/blob/master/dev/Shawn/Favored_Team_WL.svg" style="max-width:500px; width:98%; height:auto; 
     margin:auto; display:block; border:1px solid black; padding:1%;"/>
 </html>
