--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
         <li>The favored team is 72% of the time the home team. </li>
         <li> favored team wins about 59% of the time. </li>
     </ul>
-    <img src="https://github.com/MGao535/BootcampProject1/blob/master/dev/Shawn/Favored_Team_WL.svg" style="max-width:500px; width:98%; height:auto; 
-    margin:auto; display:block; border:1px solid black; padding:1%;"/>
+    <img src="/Users/shawn/Documents/GitHub/BootcampProject1/dev/Shawn/Favored_Team_WL.svg" 
+    style="max-width:500px; width:98%; height:auto; margin:auto; display:block; border:1px solid black; padding:1%;" />
+    <img src="/Users/shawn/Documents/GitHub/BootcampProject1/dev/Shawn/H&A_WL.svg"
+    style="max-width:500px; width:98%; height:auto; margin:auto; display:block; border:1px solid black; padding:1%;" />
+
+
+    <h3>Point Differential of Games versus Closing Odds</h3>
+    <p><strong>Findings:</strong></p>
+    <ul>
+        <li>There is a negative correlation between the value of the Closing Odds and the Point Differential
+            The more favored a team is to win, the more goals they win by </li>
+        <li>A linear regression can only account for 5% of the data</li>
+    </ul>
+    <img src="file:///Users/shawn/Documents/GitHub/BootcampProject1/mvp/notebooks/Closing_Odds_vs_PD.svg"
+    style="max-width:500px; width:98%; height:auto; margin:auto; display:block; border:1px solid black; padding:1%;" />
+
 </html>
