--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </ul>
     <img src="/pictures/Favored_Team_WL.svg" 
     style="max-width:500px; width:98%; height:auto; margin:auto; display:block; border:1px solid black; padding:1%;" />
-    <img src="/Users/shawn/Documents/GitHub/BootcampProject1/dev/Shawn/H&A_WL.svg"
+    <img src="/pictures/H&A_WL.svg"
     style="max-width:500px; width:98%; height:auto; margin:auto; display:block; border:1px solid black; padding:1%;" />
 
 
@@ -60,7 +60,7 @@
             The more favored a team is to win, the more goals they win by </li>
         <li>A linear regression can only account for 5% of the data</li>
     </ul>
-    <img src="file:///Users/shawn/Documents/GitHub/BootcampProject1/mvp/notebooks/Closing_Odds_vs_PD.svg"
+    <img src="/pictures/Closing_Odds_vs_PD.svg"
     style="max-width:500px; width:98%; height:auto; margin:auto; display:block; border:1px solid black; padding:1%;" />
 
 </html>
