--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
     <h3>Home and Away Games</h3>
     <p><strong>Findings:</strong></p>
     <ul>
-        <li> that are favored have a statistical advantage to those of the underdogs when both home and away.</li>
+        <li> Teams that are favored have a statistical advantage to those of the underdogs when both home and away.</li>
         <li>The favored team is 72% of the time the home team. </li>
         <li> favored team wins about 59% of the time. </li>
     </ul>
     <img src="/pictures/Favored_Team_WL.svg" 
     style="max-width:500px; width:98%; height:auto; margin:auto; display:block; border:1px solid black; padding:1%;" />
+    <br>
     <img src="/pictures/H&A_WL.svg"
     style="max-width:500px; width:98%; height:auto; margin:auto; display:block; border:1px solid black; padding:1%;" />
 
